@@ -36,5 +36,8 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_line_amount_non_zero">
             <field name="text">Statement line amount cannot be zero.</field>
         </record>
+        <record model="ir.message" id="msg_post_statement_move">
+            <field name="text">To post the move "%(move)s" you must post the statement "%(statement)s".</field>
+        </record>
     </data>
 </tryton>
