@@ -1,3 +1,5 @@
+* Prevent posting move from statement that is not posted
+
 Version 5.4.0 - 2019-11-04
 * Bug fixes (see mercurial logs for details)
 * Require fresh session to post a statement
